<resources>
    <string name="app_name">ITWorxEducationTask</string>
    <string name="chooseYourSettings">Choose your settings</string>
    <string name="chooseYourCountry">Choose your country</string>
    <string name="chooseYourCategories">Choose your categories</string>
    <string name="chooseThreeCatgories">( Choose three catgories )</string>
    <string name="send">Send</string>
    <string name="UnitedArabEmirates">UnitedArabEmirates</string>
    <string name="home">Home</string>
    <string name="searchSpecificTopic">Search specific topic</string>
    <string name="addToFavorite">Add to favorite</string>
    <string name="searchResults">Search results</string>
    <string name="favourite">Favourite</string>
</resources>