<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splashAndOnBoarding.onBoarding.view.OnBoardingActivity">
    <!--relativeToolbar-->
    <RelativeLayout
        android:id="@+id/relativeToolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/drawble_app_color_with_light_shadow">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:text="@string/chooseYourSettings"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tvSending"
        android:layout_below="@+id/relativeToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14sp"
                android:layout_marginTop="20dp"
                android:text="@string/chooseYourCountry"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/spCountries"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/drawable_white_black_stroke_5_round" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14sp"
                android:layout_marginTop="20dp"
                android:text="@string/chooseYourCategories"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginTop="5dp"
                android:text="@string/chooseThreeCatgories"
                android:textColor="@color/darkGrey"
                android:textSize="12sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCategories"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/tvSending"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/drawable_app_color_5_round"
        android:gravity="center"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="14sp" />
</RelativeLayout>